# boltview

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  README.md  algorithm__common_8h.html  algorithm__common_8h__dep__incl.map  algorithm__common_8h__incl.map  algorithm__common_8h__incl.md5  algorithms.html  annotated.html  array__view_8h.html  array__view_8h__dep__incl.md5  array__view_8h__incl.map  classbolt_1_1_binary_functor_image_view-members.html  classbolt_1_1_binary_functor_image_view.html  classbolt_1_1_binary_functor_image_view__coll__graph.map  classbolt_1_1_binary_functor_image_view__coll__graph.md5  classbolt_1_1_binary_functor_image_view__inherit__graph.md5  classbolt_1_1_binary_operator_image_view_base-members.html  classbolt_1_1_binary_operator_image_view_base.html  classbolt_1_1_binary_operator_image_view_base__coll__graph.map  classbolt_1_1_binary_operator_image_view_base__inherit__graph.map  classbolt_1_1_bordered_sub_image_view.html  classbolt_1_1_bordered_sub_image_view.js  classbolt_1_1_bordered_sub_image_view__inherit__graph.md5  classbolt_1_1_checker_board_image_view-members.html  classbolt_1_1_checker_board_image_view.html  classbolt_1_1_checker_board_image_view__inherit__graph.md5  classbolt_1_1_column_accessor-members.html  classbolt_1_1_column_accessor.html  classbolt_1_1_column_accessor.js  classbolt_1_1_const_kernel-members.html  classbolt_1_1_const_kernel.html  classbolt_1_1_const_kernel.js  classbolt_1_1_const_spectrum_view-members.html  classbolt_1_1_const_spectrum_view.html  classbolt_1_1_const_spectrum_view__coll__graph.map  classbolt_1_1_const_spectrum_view__inherit__graph.map  (+797 more)
benchmarks/: CMakeLists.txt  benchmarks.cu  benchmarks.h  for_each_bench.cu  reduce_bench.cu  shared_memory_benchmarks.cu  unified_memory_benchmarks.cu
boltview/: array_view.h  convolution.h  convolution_kernels.h  copy.h  copy.tcc  create_view.h  cuda_defines.h  cuda_utils.h  cuda_utils.tcc  debug.h  device_future.h  device_image.h  device_image_view.h  device_image_view_base.h  device_properties.h  event.h  exception_error_info.h  exceptions.h  execution_utils.h  fill.h  filter.h  for_each.h  functors.h  geometrical_transformation.h  gil_adaptor_image.h  host_image.h  host_image_view.h  host_image_view_base.h  image_io.h  image_io.tcc  image_locator.h  image_stack.h  image_view_utils.h  int_sequence.h  interpolated_view.h  interpolation.h  kernel_execution_utils.h  loop_utils.h  move_utils.h  numeric_wrapper.h  (+21 more)
boltview/mgt/: CMakeLists.txt  device_code.h  gpu_memory_manager.h  gpu_memory_manager.tcc  gpu_worker.h  gpu_worker.tcc  gpu_worker_configuration.h  image_pointers.h  memory_cache.h  resource_constraints.h  scheduler.h  scheduler.tcc  scheduler_configuration.h  task_base.h  task_interface.h
boltviewdbg/: __init__.py  printers.gdb  printers.py
cmake/: BoltViewBreakpoints.cmake  BoltViewConfig.cmake.in  FindBoltView.cmake  breakpoints.cmake  breakpoints.sh  clang.cmake  post_rpm_install.sh  test.cmake
doc/: Doxyfile  layout.xml
examples/edge_detection/: CMakeLists.txt  main.cu
examples/edge_detection/doc/: edge_detection.md
examples/fractal/: CMakeLists.txt  compute.cu  main.cc  main.cu
examples/fractal/doc/: fractals.md
examples/mip/: CMakeLists.txt  main.cu
examples/mip/doc/: mip.md
examples/procedural/: CMakeLists.txt  main.cu
examples/procedural/doc/: procedural.md
examples/qtapp/: CMakeLists.txt  diffusion_with_const_kernel.cu  diffusion_with_const_kernel.h  edge_detection.cu  edge_detection.h  fileopen.cpp  fileopen.h  inverse_phase_correlation.cu  inverse_phase_correlation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  phase_correlation_help.cu  phase_correlation_help.h  phasecorrelation.cpp  phasecorrelation.h  phasecorrelation.ui  process_qimage.cu  process_qimage.h  thresholding.cu  thresholding.h
examples/volume_rendering/: CMakeLists.txt  main.cu
examples/volume_rendering/doc/: volume_rendering.md
examples/wiener/: CMakeLists.txt  main.cu
examples/wiener/doc/: wiener.md
html/: _r_e_a_d_m_e_8md.html  algorithm__common_8h__dep__incl.md5  algorithms_8md.html  annotated_dup.js  array__view_8h__dep__incl.map  array__view_8h__incl.md5  classbolt_1_1_binary_functor_image_view.js  classbolt_1_1_binary_functor_image_view__inherit__graph.map  classbolt_1_1_binary_operator_image_view_base.js  classbolt_1_1_binary_operator_image_view_base__coll__graph.md5  classbolt_1_1_binary_operator_image_view_base__inherit__graph.md5  classbolt_1_1_bordered_sub_image_view-members.html  classbolt_1_1_bordered_sub_image_view__coll__graph.map  classbolt_1_1_bordered_sub_image_view__coll__graph.md5  classbolt_1_1_bordered_sub_image_view__inherit__graph.map  classbolt_1_1_checker_board_image_view.js  classbolt_1_1_checker_board_image_view__coll__graph.map  classbolt_1_1_checker_board_image_view__coll__graph.md5  classbolt_1_1_checker_board_image_view__inherit__graph.map  classbolt_1_1_const_spectrum_view.js  classbolt_1_1_const_spectrum_view__coll__graph.md5  classbolt_1_1_constant_image_view-members.html  classbolt_1_1_constant_image_view__coll__graph.map  classbolt_1_1_constant_image_view__coll__graph.md5  classbolt_1_1_constant_image_view__inherit__graph.md5  classbolt_1_1_cuda_event.html  classbolt_1_1_cuda_event.js  classbolt_1_1_cuda_stream-members.html  classbolt_1_1_device_array_const_view.js  classbolt_1_1_device_array_view.html  classbolt_1_1_device_fft_policy.html  (+724 more)
tests/: CMakeLists.txt  algorithm_test.cu  array_view_test.cu  coding_style.cc  convolution_test.cu  device_future_test.cu  fft_utils_test.cu  gil_adaptor_image_test.cu  image_io_test.cu  image_locator_test.cu  image_stack_test.cu  image_test.cu  interpolated_view_test.cu  interpolation_test.cu  operators_test.cu  quaternion_test.cu  reduce_test.cu  test_64bit_indices.cu  test_defs.h  test_utils.h  texture_image_test.cu  texture_image_test_utils.h  unique_ptr_test.cu  vector_test.cu  view_iterators_test.cu  view_test.cu
tests/mgt/: CMakeLists.txt  memory_cache_test.cu  scheduler_test.cu  scheduler_test_problems.cu  scheduler_test_problems.h
(+207 files in other folders)
